lab5/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sport-platform
  labels:
    app.kubernetes.io/name: sport-platform
    environment: lab5
